--- a/options/train_compact.yml
+++ b/options/train_compact.yml
@@ -60,11 +60,10 @@ network_d:
 
 train:
   optim_g:
-    type: nadam
+    type: adamw
     lr: !!float 5e-4
-    betas: [0.98, 0.99]
-    weight_decay: 0.01
-    decoupled_weight_decay: true
+    weight_decay: 0
+    betas: [0.9, 0.99]
   optim_d:
     type: nadam
     lr: !!float 1e-4
