--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,20 @@ psutil = "^5.9.8"
 pywavelets = "^1.5.0"
 
 [tool.ruff]
-select = ["ALL"]
-ignore = [ "E501", "T201", "D", "CPY001",
-	   "TD002", "TD003", "COM812", "ISC001",
-	   "N8", "ANN", "S101" ]
+lint.select = ["ALL"]
+lint.ignore = [
+	"E501",
+	"T201",
+	"D",
+	"CPY001",
+	"TD002",
+	"TD003",
+	"COM812",
+	"ISC001",
+	"N8",
+	"ANN",
+	"S101",
+]
 target-version = "py312"
 preview = true
 
