--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ opencv-python-headless = "^4.8.1.78"
 psutil = "^5.9.8"
 pywavelets = "^1.5.0"
 
+[tool.poetry.dev-dependencies]
+ruff = "^0.4.8"
+
 [tool.ruff]
 lint.select = ["ALL"]
 lint.ignore = [
