--- a/options/test_msdan.yml
+++ b/options/test_msdan.yml
@@ -1,5 +1,5 @@
 # Results will be saved to neosr/experiments/results/
-name: test_efen
+name: test_msdan
 model_type: default
 scale: 4
 use_amp: false
@@ -14,7 +14,7 @@ datasets:
       type: disk
 
 network_g:
-  type: efen
+  type: msdan
 
 path:
   pretrain_network_g: 'model.pth'
