--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,15 @@ license = "Apache 2.0"
 readme = "readme.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-numpy = "^1.25.2"
 einops = "^0.6.1"
-scipy = "^1.11.1"
-tb-nightly = "^2.14.0a20230802"
-tqdm = "^4.65.0"
+lmdb = "^1.5.1"
+numpy = "^1.25.2"
 opencv-python-headless = "^4.8.1.78"
+python = "^3.12"
 pywavelets = "^1.5.0"
+scipy = "^1.11.1"
+tqdm = "^4.65.0"
+tensorboard = "^2.17.0"
 
 [tool.ruff]
 lint.select = ["ALL"]
