--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ line-ending = "lf"
 [tool.ruff.lint.isort]
 split-on-trailing-comma = false
 
+[tool.ruff.lint.per-file-ignores]
+"neosr/__init__.py" = ["F403"]
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
