--- a/options/train_hitsrf.toml
+++ b/options/train_hitsrf.toml
@@ -39,9 +39,9 @@ val_freq = 1000
 #pretrain_network_d = 'experiments\pretrain_d.pth'
 
 [network_g]
-type = "hit_srt"
-#type = "hit_srt_medium"
-#type = "hit_srt_large"
+type = "hit_srf"
+#type = "hit_srf_medium"
+#type = "hit_srf_large"
 
 [network_d]
 type = "ea2fpn"
@@ -116,7 +116,7 @@ criterion = "huber"
 #[train.gw_opt]
 #type = "gw_loss"
 #loss_weight = 1.0
-#criterion = "chc_loss"
+#criterion = "chc"
 
 [logger]
 total_iter = 1000000
