--- a/options/train_spanplus_otf.toml
+++ b/options/train_spanplus_otf.toml
@@ -163,7 +163,7 @@ criterion = "huber"
 #[train.gw_opt]
 #type = "gw_loss"
 #loss_weight = 1.0
-#criterion = "chc_loss"
+#criterion = "chc"
 
 [logger]
 total_iter = 1000000
