--- a/options/train_mosr.toml
+++ b/options/train_mosr.toml
@@ -45,7 +45,7 @@ type = "mosr"
 #upsampler = "dys" # "gps"
 
 [network_d]
-type = "ea2fpn"
+type = "unet"
 
 [train]
 ema = 0.999
@@ -67,7 +67,7 @@ warmup_steps = 1600
 
 [train.optim_d]
 type = "adan_sf"
-lr = 5e-4
+lr = 1e-4
 betas = [ 0.98, 0.92, 0.99 ]
 weight_decay = 0.02
 schedule_free = true
@@ -95,7 +95,7 @@ criterion = "chc"
 [train.gan_opt]
 type = "gan_loss"
 gan_type = "bce"
-loss_weight = 0.3
+loss_weight = 0.1
 
 #[train.dists_opt]
 #type = "dists_loss"
