--- a/options/train_spanplus_otf.toml
+++ b/options/train_spanplus_otf.toml
@@ -158,6 +158,10 @@ loss_weight = 0.3
 
 #[train.gw_opt]
 #type = "gw_loss"
+#loss_weight = 0.5
+
+#[train.ncc_opt]
+#type = "ncc_loss"
 #loss_weight = 1.0
 
 [logger]
